--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,19 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+.photo-container {
+    width: 100%;
+    padding-bottom: 100%; /* Mantiene proporción cuadrada */
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .photo-container ion-img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ajusta la imagen al contenedor sin distorsión */
+    cursor: pointer;
+  }
+  
