--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,31 +1,31 @@
+<ion-header style="height: 60px; padding-top: 10px;">
+  <ion-toolbar color="success">
+    <ion-title class="ion-text-center">Login</ion-title>
+  </ion-toolbar>
+</ion-header>
 
-
-<ion-content class="ion-padding" style="background-color: #28a745;">
+<ion-content class="ion-padding" style="background-color: #28a745; padding-top: 20px;">
   <div class="login-container" style="max-width: 400px; margin: 0 auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-    
+    <h2 style="text-align: center; color: #28a745; font-size: 2rem; margin-bottom: 20px;">Inicio</h2>
     <div class="logo-container ion-text-center">
       <img src="assets/img/Logo.webp" alt="Logo" style="width: 150px; height: auto; margin-bottom: 20px;">
     </div>
 
-    
     <ion-item lines="none" style="background-color: transparent;">
       <ion-icon name="mail-outline" slot="start" color="success"></ion-icon>
       <ion-label position="floating" color="success">Correo Electrónico</ion-label>
       <ion-input [(ngModel)]="email" type="email"></ion-input>
     </ion-item>
 
-    
     <ion-item lines="none" style="background-color: transparent;">
       <ion-icon name="lock-closed-outline" slot="start" color="success"></ion-icon>
       <ion-label position="floating" color="success">Contraseña</ion-label>
       <ion-input [(ngModel)]="password" type="password"></ion-input>
     </ion-item>
 
-    
     <ion-button expand="block" (click)="login()" color="success" style="margin-top: 20px;">
       <ion-icon name="log-in-outline" slot="start"></ion-icon>
       Iniciar Sesión
     </ion-button>
-    
   </div>
 </ion-content>
